<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/backButtonInclude"
        layout="@layout/view_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        style="@style/Text.FontBold.Primary.DP24"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_16dp"
        android:text="@string/car_details_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_alpha_5"
        app:layout_constraintBottom_toBottomOf="@id/brandBarrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/brandTitleTextView" />

    <TextView
        android:id="@+id/brandTitleTextView"
        style="@style/Text.FontMedium.Primary.DP16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_16dp"
        android:text="@string/car_details_brand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/brandTextView"
        style="@style/Text.FontRegular.Primary.DP16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/size_16dp"
        android:paddingTop="@dimen/size_10dp"
        android:paddingEnd="@dimen/size_16dp"
        android:paddingBottom="@dimen/size_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/brandTitleTextView"
        tools:text="@string/car_details_brand_hint" />

    <EditText
        android:id="@+id/brandEditText"
        style="@style/Text.FontRegular.Primary.DP16.Editable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_12dp"
        android:layout_marginEnd="@dimen/size_12dp"
        android:hint="@string/car_details_brand_hint"
        android:inputType="text"
        android:maxLength="50"
        android:paddingBottom="@dimen/size_16dp"
        android:singleLine="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/brandTitleTextView"
        tools:text="Renault"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/brandBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="brandEditText,brandTextView" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_alpha_5"
        app:layout_constraintBottom_toBottomOf="@id/modelBarrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/modelTitleTextView" />

    <TextView
        android:id="@+id/modelTitleTextView"
        style="@style/Text.FontMedium.Primary.DP16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_16dp"
        android:text="@string/car_details_model"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/modelTextView"
        style="@style/Text.FontRegular.Primary.DP16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/size_16dp"
        android:paddingTop="@dimen/size_10dp"
        android:paddingEnd="@dimen/size_16dp"
        android:paddingBottom="@dimen/size_16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modelTitleTextView"
        tools:text="@string/car_details_model_hint"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/modelEditText"
        style="@style/Text.FontRegular.Primary.DP16.Editable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_12dp"
        android:layout_marginEnd="@dimen/size_12dp"
        android:hint="@string/car_details_model_hint"
        android:inputType="text"
        android:maxLength="10"
        android:paddingBottom="@dimen/size_16dp"
        android:singleLine="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modelTitleTextView"
        tools:text="Megane"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/modelBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="modelEditText,modelTextView" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_alpha_5"
        app:layout_constraintBottom_toBottomOf="@id/colorBarrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/colorTitleTextView" />

    <TextView
        android:id="@+id/colorTitleTextView"
        style="@style/Text.FontMedium.Primary.DP16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_16dp"
        android:text="@string/car_details_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/colorTextView"
        style="@style/Text.FontRegular.Primary.DP16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/size_16dp"
        android:paddingTop="@dimen/size_10dp"
        android:paddingEnd="@dimen/size_16dp"
        android:paddingBottom="@dimen/size_16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colorTitleTextView"
        tools:text="@string/car_details_color_hint"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/colorEditText"
        style="@style/Text.FontRegular.Primary.DP16.Editable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_12dp"
        android:layout_marginEnd="@dimen/size_12dp"
        android:hint="@string/car_details_color_hint"
        android:inputType="text"
        android:maxLength="50"
        android:paddingBottom="@dimen/size_16dp"
        android:singleLine="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colorTitleTextView"
        tools:text="Green"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/colorBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="colorEditText,colorTextView" />

    <Button
        android:id="@+id/deleteButton"
        style="@style/Button.Primary"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_50dp"
        android:text="@string/car_details_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
